# epi-lang

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  MANIFESTO.md  PAPER.md  README.md  SPEC-PT.md  SPEC.md  pyproject.toml
.github/workflows/: publish.yml
epi/: __init__.py  cli.py
epi/generators/: __init__.py  scaffold.py
epi/generators/deterministic/: middleware.py  prisma.py  routes.py  validators.py
epi/generators/epistemic/: ai_scan.py  lens_mood.py  traces.py
epi/parser/: __init__.py  ast_nodes.py  builder.py
examples/: contrato.epi  edtech-pedagogico.epi  edtech.epi
generated-v03/app/api/fluxo-avaliacao-pedagogica/: route.ts
generated-v03/app/api/traces/avaliar-resposta-aluno/[traceId]/inspect/: route.ts
generated-v03/app/api/traces/avaliar-resposta-aluno/[traceId]/resume/: route.ts
generated-v03/components/: painel-professor.tsx
generated-v03/lib/: trace-store.ts
generated-v03/middleware/: professor-ou-admin.ts  so-professores.ts
generated-v03/prisma/: schema.prisma
generated-v03/pulses/: avaliar-resposta-aluno.ts
generated-v03/traces/avaliar-resposta-aluno/: avaliar-resposta.ts  compreender-enunciado.ts
generated-v03/validators/: aluno.ts  submissao.ts
grammar/: epi.lark
prompts/: avaliar-pedagogicamente.md  compreender-enunciado.md  legal_scan.md
scripts/: gerar-pacote-inpi.sh
tests/: test_generators.py  test_parser.py  test_v03.py  test_validators.py
